array.island.Island.scala.error
Erreur de compilation :
Island:5: error: value =! is not a member of Int
    if ((num(i+1)>num(i)) && num(i)=!0){
                                   ^